--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
     
   </head>
 
-  <body>
+  <body bgcolor='green'>
 
       <h1> This is an Sample Example of Ci/Cd pipeline with aws Fargate Enabled - V1-  change1 - change2 </h1>
    <h2>This is complete pipeline using ECR-->ECS-->CODE BUILD-->CODEPIPELINE </h2>
-  </body>
+  <h3>welcome in test xyz</h3>
+</body>
   
 </html>
